# jpepeg

./: .gitignore  CMakeLists.txt  common-utils.cpp  common-utils.h  main.cpp
coder/: encoding.cpp  encoding.h
huffman/: huffman-common.cpp  huffman-common.h  huffman-decoding.cpp  huffman-decoding.h  huffman-encoding.cpp  huffman-encoding.h  huffman-input.h  huffman-output.h  huffman-table.h
io/: bit-input.h  bit-output.h  multibit-input.h  multibit-output.h
numeric/: numeric-decoding.cpp  numeric-decoding.h  numeric-encoding.cpp  numeric-encoding.h
numeric/model/: byte-model.h  model.h  uniform-model.h
segments/: APP-segment.h  COM-segment.h  DHT-segment.h  DQT-segment.h  SOF0-segment.h  SOS-segment.h  magics.h  segment.h  simple-segment.h
transcoder/: decoding.cpp  decoding.h  encoding.cpp  encoding.h  processing.cpp  processing.h
